
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32_t ;


 int TOUCH_PAD_MAX ;
 int* s_pad_activated ;
 int touch_pad_clear_status () ;
 int touch_pad_get_status () ;

__attribute__((used)) static void tp_example_rtc_intr(void *arg)
{
    uint32_t pad_intr = touch_pad_get_status();

    touch_pad_clear_status();
    for (int i = 0; i < TOUCH_PAD_MAX; i++) {
        if ((pad_intr >> i) & 0x01) {
            s_pad_activated[i] = 1;
        }
    }
}
